Have the authenticator register itself
With this patch, before answering the first request, the authenticator
will register itself to Leihs and make sure everything is set up
correctly, instead of having the administrator set all necessary
settings in the Leihs admin interface and via cURL.

This will only do the initial registration and not modify already
existing authentication systems.

This fixes #8

--- a/leihs-ldap.yml
+++ b/leihs-ldap.yml
@@ -25,7 +25,13 @@ system:
   admin:
     user: admin@example.com
     password: SECURE_PASSWORD
-  auth_id: jwt
+  auth:
+    id: jwt
+    name: LDAP Authentication
+    description: null
+    url: http://127.0.0.1:5000
+    priority: 3
+    email_match: .*
 
 ldap:
    server: ldap.example.com
