Add Logging Mechanism
This patch add a configurable logging mechanism. Logs with personal user
data should only appear if the log level is set to `DEBUG` or higher.
The log level can be set in the configuration file.

This fixes #13

--- a/leihs-ldap.yml
+++ b/leihs-ldap.yml
@@ -139,3 +139,13 @@ ui:
     # Path to a folder containing static files used in the user interface.
     # This overwrites all built-in files.
     #static: /path/to/static/dir
+
+# Level of details used for logging
+# Valid options are:
+#  - TRACE
+#  - DEBUG
+#  - INFO
+#  - WARNING
+#  - ERROR
+# Default: INFO
+loglevel: INFO
