--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
     - name: install Python dependencies
       run: |
         pip install -r requirements.txt
-        pip install bandit flake8 pyright
+        pip install bandit flake8 pyright yamllint
 
     - name: run flake8
       run: flake8 leihsldap
@@ -28,3 +28,6 @@ jobs:
 
     - name: run pyright
       run: pyright --skipunannotated leihsldap
+
+    - name: run yamllint
+      run: yamllint leihs-ldap.yml
