--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -50,9 +50,8 @@ jobs:
 
     - name: generate certificates
       run: >
-        echo "de\n\n\n\n\nlocalhost\nadmin@localhost" |
-         sudo openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes
-         -out /localhost.crt -keyout /localhost.key <<< de
+        sudo openssl req -new -newkey rsa:4096 -x509 -sha256 -days 365 -nodes
+         -out /localhost.crt -keyout /localhost.key -subj /CN=localhost/
 
     - name: deploy
       working-directory: leihs-instance
