--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -57,5 +57,7 @@ jobs:
       working-directory: leihs-instance
       run: sudo ./scripts/deploy
 
-    - name: test
-      run: curl -i http://localhost
+    - name: register admin
+      run: |
+        CSRF_TOKEN="$(curl -s 'https://verleih.virtuos.uni-osnabrueck.de/my/initial-admin' | sed -n 's/^.*csrf-token" value="\([^"]*\)".*$/\1/p')"
+        curl -s 'https://verleih.virtuos.uni-osnabrueck.de/my/initial-admin' -H "x-csrf-token: ${CSRF_TOKEN}" -H "cookie: leihs-anti-csrf-token=${CSRF_TOKEN}" -F email=admin@lkiesow.io -F password=password -F csrf-token="${CSRF_TOKEN}"
