--- a/.github/workflows/instance.yml
+++ b/.github/workflows/instance.yml
@@ -59,5 +59,5 @@ jobs:
 
     - name: register admin
       run: |
-        CSRF_TOKEN="$(curl -s 'https://verleih.virtuos.uni-osnabrueck.de/my/initial-admin' | sed -n 's/^.*csrf-token" value="\([^"]*\)".*$/\1/p')"
-        curl -s 'https://verleih.virtuos.uni-osnabrueck.de/my/initial-admin' -H "x-csrf-token: ${CSRF_TOKEN}" -H "cookie: leihs-anti-csrf-token=${CSRF_TOKEN}" -F email=admin@lkiesow.io -F password=password -F csrf-token="${CSRF_TOKEN}"
+        CSRF_TOKEN="$(curl -s 'http://localhost/my/initial-admin' | sed -n 's/^.*csrf-token" value="\([^"]*\)".*$/\1/p')"
+        curl -s 'http://localhost/my/initial-admin' -H "x-csrf-token: ${CSRF_TOKEN}" -H "cookie: leihs-anti-csrf-token=${CSRF_TOKEN}" -F email=admin@lkiesow.io -F password=password -F csrf-token="${CSRF_TOKEN}"
