Include Language Files in Python package
Version 0.3 released on pypi.org is missing the internationalization
files.

This patch adds the missing files to the manifest file defining which
files to add to the package. This should fix the tool when installed via
`pip`.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,1 @@
-include LICENSE README.md requirements.txt leihsldap/error.yml leihsldap/templates/*.html leihsldap/static/*.css
+include LICENSE README.md requirements.txt leihsldap/i18n/*yml leihsldap/templates/*.html leihsldap/static/*.css
